--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-p5": "^1.3.35",
+    "react-p5-wrapper": "^4.1.2",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
