--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
+    "moveable": "^0.51.1",
     "next": "13.4.7",
     "next-connect": "^1.0.0-next.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-icons": "^4.11.0",
     "react-p5": "^1.3.35",
     "react-p5-wrapper": "^4.1.2",
     "socket.io": "^4.7.1",
