--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.4",
     "mongoose": "^7.5.0",
     "moveable": "^0.51.1",
     "next": "13.4.7",
