--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -19,6 +21,7 @@
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "dotenv": "^16.3.1",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.16.4",
