--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "clsx": "^1.2.1",
     "dotenv": "^16.3.1",
     "emoji-mart": "^5.5.2",
-    "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.16.4",
     "mongoose": "^7.5.0",
@@ -42,5 +41,9 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "utf-8-validate": "^5.0.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
