--- a/package.json
+++ b/package.json
@@ -23,19 +23,22 @@
     "dotenv": "^16.3.1",
     "emoji-mart": "^5.5.2",
     "eslint-config-next": "13.4.7",
+    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "mongoose": "^7.5.0",
     "moveable": "^0.51.1",
-    "next": "13.4.7",
+    "next": "13.5.4",
     "next-connect": "^1.0.0-next.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-moveable": "^0.54.1",
     "react-responsive": "^9.0.2",
-    "socket.io": "^4.7.1",
+    "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
@@ -44,6 +47,7 @@
   },
   "devDependencies": {
     "eslint": "^8.50.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
