--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "dotenv": "^16.3.1",
     "emoji-mart": "^5.5.2",
     "eslint-config-next": "13.4.7",
-    "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "mongoose": "^7.5.0",
     "moveable": "^0.51.1",
@@ -36,10 +35,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-load-script": "^0.0.6",
     "react-moveable": "^0.54.1",
     "react-responsive": "^9.0.2",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
