--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.4.7",
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "moveable": "^0.51.1",
     "next": "13.5.4",
